<resources>
    <string name="app_name">CardApp</string>
    <string name="apto_deep_link_scheme">appdeeplink</string>
    <string name="action_refresh">Refresh</string>
    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="user_data_menu_info">Info &amp; terms</string>
    <string name="toast_api_error" formatted="false">Error: %s</string>
    <string name="banner_error_title">Error</string>
    <string name="error_something_went_wrong">Something went wrong.</string>
    <string name="ellipsis">…</string>
    <string name="toolbar_next_button_label">Next</string>
    <string name="toolbar_confirm_button_label">Confirm</string>
    <string name="toolbar_get_physical_card">Get your physical card!</string>
    <string name="manage_card_activate_physical_card_top_bar_item_title">Enable physical card!</string>
    <string name="toolbar_account_settings_title">Account settings</string>
    <string name="toolbar_stats_chart_title">Stats chart</string>
    <string name="select_balance_store_oauth_confirm_refresh_title">Updated your personal details?</string>
    <string name="personal_info_label">Personal Info</string>
    <string name="personal_info_first_name_hint">First name</string>
    <string name="personal_info_first_name_error">Please enter your first name.</string>
    <string name="personal_info_last_name_hint">Last name</string>
    <string name="personal_info_last_name_error">Please enter your last name.</string>
    <string name="personal_info_email_hint">Email</string>
    <string name="personal_info_email_error">Please enter a valid email address.</string>
    <string name="personal_info_email_not_available">I don\'t have an email</string>
    <string name="auth_input_phone_title">Let’s get you verified 📲</string>
    <string name="auth_input_phone_explanation">To keep your card secure, we need to send a unique code to your phone number to verify its really you. Please enter your number below.</string>
    <string name="auth_input_phone_hint">phone number</string>
    <string name="auth_input_phone_call_to_action">Continue</string>
    <string name="auth_input_phone_error_can_not_send_sms">Looks like we can\'t send you a code, as you\'ve already requested to stop receiving SMS messages from us. Chat to our team for more help.</string>
    <string name="auth_input_phone_error_invalid_phone_number">Looks like the number you\'ve entered isn\'t a valid mobile number. Check it\'s been entered correctly and isn\'t a landline number.</string>
    <string name="auth_input_phone_error_unreachable_phone_number">Looks like we can\'t send you your code as the number you\'ve provided isn\'t currently reachable by SMS. Please try again.</string>
    <string name="auth_input_phone_error_invalid_called_phone_number">Looks like the phone number you\'ve entered isn\'t valid. Please try again.</string>
    <string name="auth_input_email_title">Get Started</string>
    <string name="auth_input_email_explanation">Enter your email address</string>
    <string name="auth_input_email_hint">emailaddress@example.com</string>
    <string name="auth_input_email_footer">emailaddress@example.com</string>
    <string name="auth_verify_phone_title">Let’s get you verified 📲</string>
    <string name="auth_verify_phone_explanation">Enter the 6-digit code that we\'ve just sent to your phone.</string>
    <string name="auth_verify_phone_footer">Having problems entering your code?</string>
    <string name="auth_verify_phone_resend_button_title">Tap here to re-send</string>
    <string name="auth_verify_phone_error_wrong_code_title">Error</string>
    <string name="auth_verify_phone_error_wrong_code_message">Looks like that code isn\'t valid. Please double-check the one we sent to you, or tap here to request a new one.</string>
    <string name="auth_verify_phone_resent_wait_text">Resend your code if it doesn\'t arrive in &lt;&lt;WAIT_TIME&gt;&gt;</string>
    <string name="auth_verify_phone_expired_pin_text">Code expired, too many attempts.\nPlease request a new code via SMS</string>
    <string name="email_title">Account details</string>
    <string name="email_error">Invalid email</string>
    <string name="email_label">Enter your email address</string>
    <string name="email_hint">emailaddress@example.com</string>
    <string name="auth_verify_birthdate_title">Second step credential</string>
    <string name="auth_verify_birthdate_explanation">Enter your birthdate below to verify your account.</string>
    <string name="auth_verify_birthdate_call_to_action_title">Continue</string>
    <string name="auth_verify_birthdate_error_wrong_code_title">Error</string>
    <string name="auth_verify_birthdate_error_wrong_code_message">This birth date is incorrect</string>
    <string name="birthdate_hint_dd">DD</string>
    <string name="birthdate_hint_mm">MM</string>
    <string name="birthdate_hint_yyyy">YYYY</string>
    <string name="phone_verification_label">Verify phone number</string>
    <string name="auth_verify_phone_resent_message">A new code has been sent to your phone</string>
    <string name="phone_verification_code_hint">Enter the code that was sent to your phone</string>
    <string name="verification_code_hint">Enter the code that was sent to</string>
    <string name="verification_button_resend"><u>Re-send code</u></string>
    <string name="auth_verify_email_title">Verify email address</string>
    <string name="auth_verify_email_explanation">Enter the code that was sent to</string>
    <string name="auth_verify_email_resend_button_title">Re-send code</string>
    <string name="auth_verify_email_footer">Having problems entering your code?</string>
    <string name="auth_verify_email_expired_pin_text">Code expired, too many attempts.\nPlease request a new code via your email address</string>
    <string name="auth_verify_email_resent_message">A new code has been sent to your email address</string>
    <string name="auth_verify_email_error_wrong_code_title">Error</string>
    <string name="auth_verify_email_error_wrong_code_message">Looks like that code isn\'t valid. Please double-check the one we sent to you, or tap here to request a new one.</string>
    <string name="auth_verify_email_resent_wait_text">Resend your code if it doesn\'t arrive in &lt;&lt;WAIT_TIME&gt;&gt;</string>
    <string name="email_verification_title">Security check</string>
    <string name="email_verification_code_hint">Enter the code that was sent to your email</string>
    <string name="email_verification_code_hint_theme_2">Enter the 6-digit code we\'ve just sent to your email</string>
    <string name="email_verification_resent">A new code has been sent to your email</string>
    <string name="select_card_product_select_country_title">Country of residence 🏠</string>
    <string name="select_card_product_select_country_explanation">Select your country of tax residence.</string>
    <string name="select_card_product_select_country_call_to_action">Select country</string>
    <string name="manage_card_activate_physical_card_code_title">Enable your physical card</string>
    <string name="manage_card_activate_physical_card_code_message">Enable your card by entering the activation code that came attached with your physical card.</string>
    <string name="manage_card_get_pin_nue_title">Congratulations!</string>
    <string name="manage_card_get_pin_nue_explanation">Your physical Shift Card has been enabled. We\'ve set a random PIN code for your card.</string>
    <string name="manage_card_get_pin_nue_call_to_action_title">Get my PIN</string>
    <string name="manage_card_get_pin_nue_footer">PIN is obtained via phone call and charge may be applied by your mobile network operator.</string>
    <string name="transaction_details_adjustment_capture_text">Capture</string>
    <string name="transaction_details_adjustment_refund_text">Refund</string>
    <string name="transaction_details_adjustment_hold_text">Hold</string>
    <string name="transaction_details_adjustment_release_text">Release</string>
    <string name="transaction_details_adjustment_other_text">Other</string>
    <string name="transaction_details_details_device_type_ecommerce">eCommerce</string>
    <string name="transaction_details_details_device_type_pos">POS</string>
    <string name="transaction_details_details_device_type_international">INT.</string>
    <string name="transaction_details_details_device_type_emv">EMV</string>
    <string name="transaction_details_details_transaction_type_atm_withdrawal">ATM Withdrawal</string>
    <string name="transaction_details_details_transaction_type_pending">Pending</string>
    <string name="transaction_details_details_transaction_type_reversal">Reversal</string>
    <string name="transaction_details_details_transaction_type_purchase">Purchase</string>
    <string name="transaction_details_details_transaction_type_pin_purchase">PIN Purchase</string>
    <string name="transaction_details_details_transaction_type_refund">Refund</string>
    <string name="transaction_details_details_transaction_type_decline">Decline</string>
    <string name="transaction_details_details_transaction_type_balance_inquiry">Balance Inquiry</string>
    <string name="transaction_details_details_transaction_type_credit">Credit</string>
    <string name="transaction_details_details_transaction_type_other">Other</string>
    <string name="transaction_details_details_transaction_class_atm_withdrawal">ATM Withdrawal</string>
    <string name="transaction_details_details_transaction_class_authorised">Authorised</string>
    <string name="transaction_details_details_transaction_class_pending">Pending</string>
    <string name="transaction_details_details_transaction_class_declined">Declined</string>
    <string name="transaction_details_details_transaction_class_reversed">Reversed</string>
    <string name="select_balance_store_oauth_confirm_title">Welcome to your Card!</string>
    <string name="select_balance_store_oauth_confirm_explanation">These are the personal details you\'ve saved securely on your account. Tap below to confirm they\'re correct.</string>
    <string name="select_balance_store_oauth_confirm_call_to_action_title">Confirm</string>
    <string name="select_balance_store_oauth_confirm_first_name">First Name</string>
    <string name="select_balance_store_oauth_confirm_last_name">Last Name</string>
    <string name="select_balance_store_oauth_confirm_email">Email address</string>
    <string name="select_balance_store_oauth_confirm_address">Address</string>
    <string name="select_balance_store_oauth_confirm_phone_number">Phone number</string>
    <string name="select_balance_store_oauth_confirm_birth_date">Date of birth</string>
    <string name="select_balance_store_oauth_confirm_footer">Having issues with your delivery address?&lt;br/&gt;&lt;a href=\'https://www.aptopayments.com\'&gt;To make changes, go to the settings section in your account and update your information&lt;/a&gt;</string>
    <string name="disclaimer_disclaimer_call_to_action_title">I agree</string>
    <string name="disclaimer_disclaimer_cancel_action_button">I do not agree to the Cardholder agreement</string>
    <string name="disclaimer_disclaimer_title">Your Cardholder agreement</string>
    <string name="select_balance_store_login_title">Connect your account</string>
    <string name="select_balance_store_login_explanation">Spend your cryptocurrency held on your account across 44 million locations worldwide.</string>
    <string name="select_balance_store_login_call_to_action_title">Connect your account</string>
    <string name="manage_card_get_pin_voip_speaker">speaker</string>
    <string name="manage_card_get_pin_voip_mute">mute</string>
    <string name="manage_card_get_pin_voip_keypad">keypad</string>
    <string name="manage_card_get_pin_voip_hide">hide</string>
</resources>