<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activate_physical_card"
        android:enabled="true"
        android:icon="@drawable/ic_activate_physical_card"
        android:title="@string/manage_card_activate_physical_card_top_bar_item_title"
        app:actionLayout="@layout/layout_menu_activate_physical_card"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_card_stats"
        android:icon="@drawable/ic_chart"
        android:title="@string/toolbar_stats_chart_title"
        app:actionLayout="@layout/layout_menu_stats_chart"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_account_settings"
        android:icon="@drawable/ic_account_settings"
        android:title="@string/toolbar_account_settings_title"
        app:actionLayout="@layout/layout_menu_account_settings"
        app:showAsAction="always" />
</menu>
